重写设计模式示例 去除spock依赖解决引入外部模块报错问题 去除groovy